Page jump bug fixed

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -21,7 +21,7 @@ $page-padding-left: 17%;
     animation: 42s linear infinite;
     animation-name: rotation;
 
-    &:nth-of-type(2) {
+    &:nth-of-type(1) {
       top: 3000px;
     }
   }
@@ -35,7 +35,6 @@ $page-padding-left: 17%;
       font-weight: 400;
       font-size: 132px;
       margin: 30px 0;
-
     }
 
 
